--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "4.10.0",
-    "@reduxjs/toolkit": "^1.4.0",
+    "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -51,7 +51,7 @@
     "@types/ua-parser-js": "^0.7.33",
     "aws-amplify": "^3.3.1",
     "aws-sdk": "^2.757.0",
-    "axios": "^0.20.0",
+    "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "connected-react-router": "^6.3.1",
     "exif-react-avatar-edit": "^0.8.3",
@@ -64,7 +64,7 @@
     "react-redux": "^7.1.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^4.0.3",
     "redux": "^4.0.1",
     "redux-form": "^8.3.6",
     "redux-thunk": "^2.3.0",
