--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -27,6 +27,13 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Amplify setup
+        run: |
+          echo "const awsmobile = {
+            "aws_project_region": "eu-central-1"
+          };
+            
+          export default awsmobile;" >> ./src/aws-exports.js
 
       - name: Build and Push Image
         env:
