--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
   "private": true,
   "dependencies": {
     "@aws-amplify/ui-react": "^3.5.9",
-    "@emotion/react": "^11.9.3",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.7",
-    "aws-amplify": "^4.3.25",
+    "aws-amplify": "4.3.43",
     "axios": "^0.21.1",
     "dayjs": "^1.10.4",
     "konva": "^8.0.2",
     "md5": "^2.3.0",
     "piexifjs": "^1.0.6",
     "rc-table": "^7.24.2",
-    "react": "^18.1.0",
-    "react-beautiful-dnd": "^13.1.0",
+    "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.1.0",
     "react-query": "^3.15.2",
     "react-router-dom": "^6.3.0",
